Make login page part 3 (Fix bug display on mobile and tablet)

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
     width: 768px;
-    max-width: 100%;
+    max-width: calc(100% - 32px);
     height: 570px;
     max-height: 100%;
     margin: auto;
